    - chinese2([a,m],...)      like chinese, but also returns modulo
    - cdivint(a,b)             integer a/b quotient  (ceiling)
    - fdivrem(a,b)             integer a/b quo + rem (floor)
    - cdivrem(a,b)             integer a/b quo + rem (ceiling)
    - lucasumod(P,Q,k,n)       modular Lucas U value
    - lucasvmod(P,Q,k,n)       modular Lucas V value

    [FIXES]

    - sieve_range with tiny start and depth values could sieve one deeper
      than precisely requested.

    - is_ecpp_prime() returns 1 or 0, rather than 2 or 0.  This matches the
      documentation and other functions (e.g. bls75, miller, aks).

    - harmfrac(0) returns zero.

    - ei > 100 called euler constant with incorrect precision.

    - divmod (a,0,1) = 0, to match MPU, Pari, and Math::BigInt.
      divmod (a,1,n) = a mod n.  It was returning 0 in some cases.

    - zeta could round the last digit wrong in rare cases.

    - lucas_sequence did not always match modded lucasu and lucasv.
      Removed some unnecessary restrictions on P and Q.
      Qk=powmod(Q,k,n) wasn't true for k=0.  Fixed.
      Large IV P and P could overflow internally.  Fixed.

    - lcm(-n) now returns n instead of -n.
      znorder(a,-n) now returns znorder(a,n) instead of -n.

    - chinese uses absolute values of modulus.

    - lcm with no arguments returns 1 rather than 0.

    [PERFORMANCE]

    - The first 100 Bernoulli numbers are cached, and more will be cached
      by bernvec or faulhaber_sum.

    - Add faster factorialmod code.  5-10x faster for large inputs.

    [OTHER]

    - valuation(n,k) now will error if k < 2.  This follows Pari and SAGE.

    - lucasu and lucasv accept bigint P and Q values

0.52 2020-06-22

    [ADDED]

    - powint(a,b)             integer a^b
    - mulint(a,b)             integer a*b
    - addint(a,b)             integer a+b
    - subint(a,b)             integer a-b
    - divint(a,b)             integer a/b quotient  (floor)